[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
image = "0.24"
ocrs = "0.4"
read-process-memory = "0.1.6"
rten = "0.3"
rten-imageio = "0.3"
rten-tensor = "0.3"
windows-capture = "1.0"

[dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Memory",
  "Win32_System_LibraryLoader",
  "Win32_System_ProcessStatus",
  "Win32_UI_Input_KeyboardAndMouse",
]
