[package]
name = "btd6-tool-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
byteorder = "1.5.0"
read-process-memory = "0.1.6"

[dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
]
