[package]
name = "btd6-tool-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.14.3"
byteorder = "1.5.0"
crossterm = "0.27.0"
paste = "1.0.14"
ratatui = "0.26.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[dependencies.windows]
version = "0.52"
features = [
  "Win32_Foundation",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Accessibility",
]
